# call_me_maybe

./: README.md  pyproject.toml
data/input/: function_calling_tests.json
src/: __main__.py  json_validator.py
