[project]
name = "call-me-maybe"
version = "0.1.0"
description = ""
authors = [
    {name = "fbendnan",email = "fatimazahrabendnane@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.5.0,<3.0.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
